--- a/foodie/templates/base.html
+++ b/foodie/templates/base.html
@@ -4,6 +4,10 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel='stylesheet' href='.\static\css\main.css'>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Moo+Lah+Lah&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <meta name='viewport' content="width=device-width, initial scale=1.0"> 
         <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
@@ -56,6 +60,8 @@
             {% endif %}
         {% endwith %}
         <div class='container'>
+            <h3 align="center" style='padding-top: 1em;'> {% block title %}{% endblock %}
+            </h3>
             {% block content %}{% endblock %}
         </div>
 
