--- a/foodie/templates/home.html
+++ b/foodie/templates/home.html
@@ -1,63 +1,31 @@
-{% extends 'base.html' %}
-{% block content %}
-    <div id = 'body'>
-        <div id = 'display_row'>
-
-            
-
-            <div id='home_box'>
-
-
-                    <form  id='form' method='POST'  url_for('home') >
-                    
-                        <div id='chooseType'>
-            
-                        <div id='bored'><span>Bored!</span></div>
-                        
-                            <div id='sameHeight'>
-                                    <select name="activity" id="activity" style="width:12em;">
-                                        {% if data %}
-                                            <option class="dropdown-item border-radius-md" value="choose" selected='selected' disabled='disabled'>&nbsp {{ data[ "type" ] }} </option>
-                                        {% else %}
-                                            <option class="dropdown-item border-radius-md" value="choose" selected='selected' disabled='disabled'> {{ data[ "type" ] }} </option>
-                                        {% endif %}
-                                        <option value="random">&nbspRandom</option>
-                                        <option value="charity">&nbspCharity</option>
-                                        <option value="cooking">&nbspCooking</option>
-                                        <option value="relaxation">&nbspRelaxation</option>
-                                        <option value="music">&nbspMusic</option>
-                                        <option value="busywork">&nbspBusy work</option>
-                                        <option value="recreational">&nbspRecreational</option>
-                                        <option value="social">&nbspSocial</option>
-                                        <option value="diy">&nbspDiy</option>
-                                    </select>
-                                
-        
-                                <button class="btn btn-primary" id='butt' type="submit" style='margin-left: 5%;'>Give me an activity</button>
-                            </div>
-                            
-                        
-                    </div>
-                </form>
-
-       
-        
-                {%if data != None%}
-                <div id='showActivity' >     
-                    <div style='width: 420px; word-wrap: break-word;'><span>Activity: </span>{{ data [ 'activity' ] }}</div>
-                    <div><span>Activity-type: </span>{{ data [ 'type' ] }}</div>
-                    <div><span>Number of people needed: </span>{{ data['participants'] }}</div>
-                    <div><span>Price: </span>{{ data['price'] }}</div>
-                    {% if data['link']|length %}
-                        <div><span>Link: </span>{{ data['link'] }}</div>
-                    {% endif %}
-                    <div><span><a id='butt' href="/saved?aid={{ data['id'] }}" style='width: 40%; margin-left: 30%;' class="btn btn-secondary" >Save Activity</a></span></div>
-                
-                </div> 
-                {%endif%}
-            </div>
-
-        </div>
-        
-    </div>
+{% extends "base.html" %} {% block title %}Login{% endblock %}
+{% block content %} 
+<form method="POST" style='font-size: 1.3em;'>
+     <!-- <h3 align="center">Login</h3> -->
+     <div class="form-group">
+       <label for="email">Email Address</label>
+       <input
+         type="email"
+         class="form-control"
+         id="email"
+         name="email"
+         placeholder="Enter email"
+         style='font-size: 0.9em;'
+       />
+     </div>
+     <div class="form-group">
+       <label for="password">Password</label>
+       <input
+         type="password"
+         class="form-control"
+         id="password"
+         name="password"
+         placeholder="Enter password"
+         style='font-size: 0.9em;'
+       />
+     </div>
+     <br />
+     <button type="submit"  style='padding: 3px; font-size: 1em;' class="btn btn-primary">Login</button>
+   </form>
+ </div>
 {% endblock %}
