--- a/foodie/templates/signup.html
+++ b/foodie/templates/signup.html
@@ -1,23 +1,17 @@
-{% extends "base.html" %} {% block title %}Sign Up{% endblock %} 
+{% extends "base.html" %} {% block title %}Sign Up{% endblock %}
 {% block content %}
-    <form method="POST">
-      <h3 align="center">Sign Up</h3>
-      <!-- <div class="form-group">
-        <label for="email">Email Address</label>
-        <input
-          type="email"
-          class="form-control"
-          id="email"
-          name="email"
-          placeholder="Enter email"
-        />
-      </div> -->
+    <form method="POST"  style='font-size: 1.3em;'>
+        <div class="form-group" >
+          <label for="email">Email Address</label>
 
-        <div class="col-md-6">
-          <div class="form-group">
-            <label for="email">Email Address</label>
-
-            <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
+          <input
+           type="email"
+           class="form-control" 
+           id="email" 
+           name="email" 
+           placeholder="name@example.com"
+           style='font-size: 0.9em;'
+           >
         </div>
 
       <div class="form-group">
@@ -28,6 +22,7 @@
           id="firstName"
           name="firstName"
           placeholder="Enter first name"
+          style='font-size: 0.9em;'
         />
       </div>
       <div class="form-group">
@@ -38,6 +33,7 @@
           id="password1"
           name="password1"
           placeholder="Enter password"
+          style='font-size: 0.9em;'
         />
       </div>
       <div class="form-group">
@@ -48,9 +44,11 @@
           id="password2"
           name="password2"
           placeholder="Confirm password"
+          style='font-size: 0.9em;'
         />
       </div>
       <br />
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" style='padding: 3px; font-size: 1em;'class="btn btn-primary">Submit</button>
     </form>
+ 
 {% endblock %}
