--- a/foodie/templates/base.html
+++ b/foodie/templates/base.html
@@ -14,7 +14,7 @@
         <title>Foodie</title>
     </head>
     <body>
-        <nav class='navbar navbar-expand-lg navbar-light bg-light'>
+        <nav style='font-size: 1.2em; font-weight: 700;' class='navbar navbar-expand-lg navbar-light bg-light'>
             <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbar'>
                 <span class='navbar-toggler-icon'></span>
             </button>
