--- a/foodie/templates/base.html
+++ b/foodie/templates/base.html
@@ -11,7 +11,7 @@
         <meta charset="UTF-8">
         <meta name='viewport' content="width=device-width, initial scale=1.0"> 
         <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
-        <title>Foodie</title>
+        <title>The Bored App</title>
     </head>
     <body>
         <nav style='font-size: 1.2em; font-weight: 700;' class='navbar navbar-expand-lg navbar-light bg-light'>
